Bug 692578 - Font rendering for watermarks is incorrect for non-square resolutions
Summary: Font rendering for watermarks is incorrect for non-square resolutions
Status: NOTIFIED FIXED
Alias: None
Product: Ghostscript
Classification: Unclassified
Component: Graphics Library (show other bugs)
Version: 9.04
Hardware: PC Windows XP
: P2 normal
Assignee: Chris Liddell (chrisl)
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-10-10 15:45 UTC by Leonid Lukomskij
Modified: 2011-11-09 18:20 UTC (History)
1 user (show)

See Also:
Customer: 582
Word Size: ---


Attachments
Problem file (2.26 MB, application/pdf)
2011-10-10 15:45 UTC, Leonid Lukomskij
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Leonid Lukomskij 2011-10-10 15:45:27 UTC
Created attachment 7978 [details]
Problem file

I have an example with wrong font rendering.

I ran it:

gswin32c -dSAFER -dBATCH -dNOPAUSE -sDEVICE=tiffg4 -r1200x600 -sOutputFile=3.tif 3510-09_pf1,pdf

Letters in background (watermarks) became slant.

On 1200x1200 all is ok. Other fonts look correct on 1200x600 too.

Please have a look

Leonid
Comment 1 Chris Liddell (chrisl) 2011-10-14 09:28:35 UTC
Fixed in:

http://git.ghostscript.com/?p=ghostpdl.git;a=commitdiff;h=056c8a